networkSecurityGroup.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "",
      "allowedValues": [
        "Brazil South",
        "East Asia",
        "East US",
        "Japan East",
        "Japan West",
        "North Central US",
        "North Europe",
        "South Central US",
        "West Europe",
        "West US",
        "Southeast Asia",
        "Central US",
        "East US 2"
      ],
      "metadata": {
        "description": "Network Security Group Deployment Location"
      }
    },
    "networkApiVersion": {
      "type": "string",
      "defaultValue": "2015-06-15",
      "metadata": {
        "description": "API Version for the Network Resources"
      }
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "networkSecurityGroup",
      "metadata": {
        "description": "Network Security Group Name"
      }
    },
    "tag": {
      "type": "object",
      "defaultValue": {
        "key1": "networksecurity",
        "value1": "MariaDB"
      },
      "metadata": {
        "description": "Tag Values"
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "comments": "Network Security Group Resource",
      "apiVersion": "[parameters('networkApiVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "tags": {
        "[parameters('tag').key1]": "[parameters('tag').value1]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "ssh",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1010,
              "direction": "Inbound"
            }
          },
          {
            "name": "maxscale",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "4000-4010",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1020,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
